--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
             </div>
         </div>
     </section>
+    <section class="container-4">
+        <div class="container_card-4">
+            <div class="container_text-4">
+                <h2>Ready to build your community?
+                </h2>
+            </div>
+            <div class="container_bot-2">
+                <button class="_bot-3">Get Started For Free</button>
+            </div>
+        </div>
+    </section>
         <!-- <div class="container"> -->
             <!-- <div class="card"> -->
                 <!-- <div class="box-1"> -->
